{
    "name": "Inputs",
    "maps": [
        {
            "name": "MainMap",
            "id": "a9f6a543-55a7-408f-bf7e-30165050fe4b",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "28ed412a-8cbb-4c46-a341-a9e73500e153",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bbb97f9e-555b-4f7d-8793-b6519df0dd5d",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}